# ASCON-encryption-for-MCUs-in-an-MQTT-network

./: .gitignore  LICENSE  README.md
Data analysis/: .gitignore  README.md
Data analysis/analysis/: energy_consumption.ipynb  execution_times.ipynb  helpers.py  plot_code_size.ipynb  plot_energy.ipynb  power_traces.ipynb  run_power_consumption.py
Data analysis/avg_power_consumptions/: power_consumption_AES-GCM_30.csv  power_consumption_AES-GCM_35.csv  power_consumption_AES-GCM_350.csv  power_consumption_ASCON_30.csv  power_consumption_ASCON_35.csv  power_consumption_ASCON_350.csv  power_consumption_NONE_30.csv  power_consumption_NONE_35.csv  power_consumption_NONE_350.csv  power_consumption_masked_ASCON_30.csv  power_consumption_masked_ASCON_350.csv
Data analysis/execution_times/: BLE_transmission_time.csv  DEC.csv  DS_DEC.csv  DS_ENC.csv  DS_PROC.csv  DS_encryption_time_of_RTT.csv  ENC.csv  GW_DS_PROC.csv  GW_US_PROC.csv  HW_and_Network.csv  (+6 more)
MCU-gateway/: CMakelists.txt  main.c
data-storage/: .gitignore  README.md  environment.yaml  main.py  pyproject.toml
gateway/: README.md
masked-ascon-sensor/: CMakeLists.txt  encryption.c  encryption.h  experiment_settings.h  masked_ascon_encryption.c  masked_ascon_encryption.h  server.c  server_common.c  server_common.h
sensor/: CMakeLists.txt  README.md  encryption.c  encryption.h  experiment_settings.h  masked_ascon_encryption.c  server.c  server_common.c  server_common.h  temp_sensor.gatt
sensor-MCU/: CMakeLists.txt  old-sensor-MCU.c  sensor-MCU.c
sensor-MCU/libs/ascon/protected_bi32_armv6_leveled/: asm.h  word.h
(+61 files in other folders)
